most of instrumentation done
Former-commit-id: e562fa649a282d37931dec2e83d86d7bae1a0536 [formerly e562fa649a282d37931dec2e83d86d7bae1a0536 [formerly e562fa649a282d37931dec2e83d86d7bae1a0536 [formerly 3c82f937c31f85968d0444db589fc678b14b8c90]]]
Former-commit-id: 9c6563f665a19b25f2caacc6da4d00ef8b370b62 [formerly 9c6563f665a19b25f2caacc6da4d00ef8b370b62 [formerly 1b07a84b745ee2f230d5ea8ad74f47a6d07838ef]] [formerly e31f12593a5b1bb8c76544f35036ae241abb95a8 [formerly e31f12593a5b1bb8c76544f35036ae241abb95a8 [formerly 5550e19801076b278e14ffc436ab47a0c308f080]]]
Former-commit-id: 0f2a2052f605629173a6e2a55ae71738071cbda4 [formerly e31f12593a5b1bb8c76544f35036ae241abb95a8]
Former-commit-id: 8ecdf79e4247c781d0d89694d8f09aa5b1daefb6 [formerly 420914eb5f6318f7e3c49888c459b5fae2cf5158]
Former-commit-id: 592e99c9664495b47ff62fa8ea6def7ab95b181f

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -46,6 +46,11 @@
         <url-pattern>/downloadResults/*</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>downloadServet</servlet-name>
+        <url-pattern>/downloadEvents/*</url-pattern>
+    </servlet-mapping>
+
   <context-param>
      <param-name>config</param-name>
      <param-value>english</param-value>
