--- a/build.xml
+++ b/build.xml
@@ -277,6 +277,16 @@
         </jar>
     </target>
 
+    <target depends="build" name="classroomIraqi">
+        <jar destfile="npfClassroomIraqi.war" basedir="war"
+             includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/iraqi/**,scoring/bin.linux64/**,scoring/configurations/**"
+                >
+            <manifest>
+                <attribute name="Built-Date" value="${current.time}"/>
+            </manifest>
+        </jar>
+    </target>
+
     <target depends="build" name="mandarinClassroom">
         <jar destfile="cmMITClassroom.war" basedir="war"
              includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/mandarinClassroom/**,scoring/bin.linux64/**,scoring/configurations/**,scoring/models.wsj01-16/**"
