comment out special phone mapping file
Former-commit-id: 1c5756291bea7ab8be10b50464ac70754178d9e2 [formerly 05f6bb79268325328697906233b4d807da9730ec] [formerly 840e79f390358ca45665942edb38e92d0de696ba [formerly db4e9a1844fc6ae64c963eaff6c3220205258463]] [formerly 279e9e0ad3ed7bc6ff22fa4d24ed2f2428ed0d81]
Former-commit-id: c36406d763a3af69e9442d9e823388f2773f988a [formerly 060046994c0056462e79f2470fbeab26164b8c27] [formerly 49f7aad24a21918294e6fdd2d47a44650c94dbe4 [formerly 3a4af0decf0d33af959772ebc5bad6d8b81dc620]] [formerly 1d26ecbf82f99def8b07335e5cc5d9dbd205eb9f]
Former-commit-id: 6c7b9c02187bb92eef1ac049ba91604f3ddb0c8d
Former-commit-id: 3698cc6ed38eca9c1c4e1612aa0f72c5fd67b759 [formerly 596d505230de649cd4b762eac70178efd69ce623]
Former-commit-id: c1698e97657f591690dd122ccffdf6723fd30fe7

--- a/war/config/msa/quizlet.properties
+++ b/war/config/msa/quizlet.properties
@@ -10,4 +10,4 @@ mediaDir=bestAudio
 rtl=true
 lessonPlanFile=msaCourseExamplesAppen.xlsx
 webserviceHostPort=31182
-phonemeMapping=msa_toipa_v2.txt
+#phonemeMapping=msa_toipa_v2.txt
