--- a/build.xml
+++ b/build.xml
@@ -444,6 +444,8 @@
         </copy>
     </target>
 
+    <!-- call sbt assem
+    -->
     <target name="assembly" description="call sbt">
         <exec dir="npdata" executable="sbt">
             <arg value="assembly"></arg>
