monitoring service now separate
Former-commit-id: 643d2bdab2284f4a8e10d8d88e19894fbe107e58

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -43,3 +43,5 @@ log4j.logger.org.hibernate=INFO
 #log4j.logger.some.cat=TRACE#examples.customLevel.XLevel
 log4j.logger.org.mortbay.io.nio=INFO
 log4j.logger.org.eclipse.jetty=INFO
+log4j.logger.scala.slick=INFO
+log4j.logger.scala.slick.jdbc=INFO
