analysis calls as separate service
Former-commit-id: 6d4012c6768d4e2029b49f13ffda22efe80b81c1 [formerly cc4370c1d98a19ebe2987911b779d647257a1542] [formerly d1a8487eee1ab3acee2534b058a3597ab6ace146 [formerly 5479b132ab8d8597cab07300ad9162c993d0f647]]
Former-commit-id: 873aa21f5765b1774e453943321e35c1c1cc330a [formerly 57f00fbe7644feed7725b7fbda1a938597285d94]
Former-commit-id: e0fc51c8f89943af6e2a5008c1531a5d469fc929

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -58,6 +58,18 @@
         <url-pattern>/langtest/monitoring-manager</url-pattern>
     </servlet-mapping>
 
+
+    <servlet>
+        <servlet-name>analysisService</servlet-name>
+        <servlet-class>mitll.langtest.server.services.AnalysisServiceImpl</servlet-class>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>analysisService</servlet-name>
+        <url-pattern>/langtest/analysis-manager</url-pattern>
+    </servlet-mapping>
+
     <!-- ==================================================================== -->
     <!-- End RPC mappings                                                     -->
     <!-- ==================================================================== -->
