--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -44,4 +44,6 @@ log4j.logger.org.hibernate=INFO
 log4j.logger.org.mortbay.io.nio=INFO
 log4j.logger.org.eclipse.jetty=INFO
 log4j.logger.scala.slick=INFO
+
 log4j.logger.scala.slick.jdbc=INFO
+log4j.logger.slick.compiler=INFO
