list service separate service
Former-commit-id: 9940370ae60cb7b409103889ffb84878272f4dc8
Former-commit-id: cc842dd7396c38d5d6205605c1fe247c32979508

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -70,6 +70,17 @@
         <url-pattern>/langtest/analysis-manager</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>listService</servlet-name>
+        <servlet-class>mitll.langtest.server.services.ListServiceImpl</servlet-class>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>listService</servlet-name>
+        <url-pattern>/langtest/list-manager</url-pattern>
+    </servlet-mapping>
+
     <!-- ==================================================================== -->
     <!-- End RPC mappings                                                     -->
     <!-- ==================================================================== -->
