mostly got import of audio user event working
Former-commit-id: e6aee56c203102433c20ecc95444e8f856ed0d79

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -32,8 +32,6 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 #log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 log4j.appender.A1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%-5p] [%-20.20c{1}:%-4L] - %m%n
 
-log4j.logger.org.hibernate=INFO
-
 # Set the priority of "some.cat" to TRACE (defined in
 # examples.customLevel.XLevel). Since we specified MyLoggerFactory as
 # the logger factory, the following line willl also have the side
@@ -47,3 +45,4 @@ log4j.logger.scala.slick=INFO
 
 log4j.logger.scala.slick.jdbc=INFO
 log4j.logger.slick.compiler=INFO
+log4j.logger.mitll.npdata.dao.audio=DEBUG
