--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -46,3 +46,5 @@ log4j.logger.scala.slick=INFO
 log4j.logger.scala.slick.jdbc=INFO
 log4j.logger.slick.compiler=INFO
 log4j.logger.mitll.npdata.dao.audio=DEBUG
+log4j.logger.org.eclipse.jetty.server=INFO
+log4j.logger.o.e.jetty=INFO
