--- a/build.xml
+++ b/build.xml
@@ -276,6 +276,18 @@
     </target>
 
 
+    <target depends="build" name="classroomSudaneseEval">
+        <jar destfile="npfClassroomSudaneseEval.war" basedir="war"
+             includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/sudaneseEval/**,scoring/bin.linux64/**,scoring/configurations/**"
+        >
+
+            <manifest>
+                <attribute name="Built-Date" value="${current.time}"/>
+            </manifest>
+        </jar>
+    </target>
+
+
     <target depends="build" name="classroomTagalog">
         <jar destfile="npfClassroomTagalog.war" basedir="war"
              includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/tagalog/**,scoring/bin.linux64/**,scoring/configurations/**,scoring/models.wsj01-16/**"
