updated config file for spanish
Former-commit-id: 31ada0851a8a90321e159b3d84efee4fd240e09b [formerly 81a0f3724533fbaa70fc8e5fcf0150639f18d0ed]
Former-commit-id: bf1fc90eb19a003f0f2027c16f52c33dca74f366

--- a/war/config/korean/quizlet.properties
+++ b/war/config/korean/quizlet.properties
@@ -2,9 +2,7 @@ appTitle=Korean Pronunciation Feedback BETA
 splashTitle=Korean feedback and practice BETA
 language=Korean
 h2Database=npfKorean
-mediaDir=bestAudio
 minPronScore=0.31
-loginType=STUDENT
 #lessonPlanFile=5500-korean-basic-course-examples_test.xlsx
 #lessonPlanFile=2014_07_25_KP-sem1-edited-FV-with-other-semesters.xlsx
 #lessonPlanFile=2014_09_17_KP_Sem_1_2_3.xlsx
@@ -15,10 +13,10 @@ loginType=STUDENT
 #lessonPlanFile=with_english_numsep_merged_ids_split.xlsx
 lessonPlanFile=with_english_numsep_merged_ids_split_6932.xlsx
 MODELS_DIR=models.dli-korean
-screenPortion=0.8
 emailAddress=gordon.vidaver@ll.mit.edu
 N_OUTPUT=18
 N_HIDDEN=2000,2500,2500
-webserviceHostPort=31184
-dodecode=false
-oldSchoolService=false
+webserviceHostPort=31187
+dodecode=true
+dropRefResultTable=false
+#oldSchoolService=false
