--- a/war/config/msa/classroom.properties
+++ b/war/config/msa/classroom.properties
@@ -1,12 +1,16 @@
 appTitle=MSA Pronunciation Feedback
 h2Database=msaClassroom
+usePredefinedTypeOrder=false
 language=msa
 MODELS_DIR=models.dli-ara
 N_HIDDEN=2000,2000
 N_OUTPUT=38
+rtl=true
+#lessonPlanFile=msaCourseExamplesAppen-vowelized.xlsx
+#lessonPlanFile=msaCourseExamplesAppen.xlsx
 lessonPlanFile=msaCourseExamplesAppen_51_chunked_2.xlsx
 webserviceHostPort=31181
-#dodecode=true
+dodecode=true
 #dropRefResultTable=true
 #phonemeMapping=msa_toipa.txt
-#usePhoneToDisplay=false
+usePhoneToDisplay=false
