--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -77,7 +77,7 @@
 
     <context-param>
         <param-name>config</param-name>
-        <param-value>sudaneseEval</param-value>
+        <param-value>english</param-value>
     </context-param>
 
     <context-param>
