uses generic netProf config
Former-commit-id: dd5d1571a1fdadbda310ba7b0cfd96b609182c25 [formerly 434625fb231273f4af204575868fd9ef725902d6]
Former-commit-id: d79eff5bac1f2a57988e78eb68c42caf7df3ee22

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -134,11 +134,11 @@
 
     <context-param>
         <param-name>config</param-name>
-        <param-value>spanish</param-value>
+        <param-value>netProf</param-value>
     </context-param>
 
     <context-param>
         <param-name>configFile</param-name>
-        <param-value>quizlet.properties</param-value>
+        <param-value>config.properties</param-value>
     </context-param>
 </web-app>
