--- a/war/config/msa/quizlet.properties
+++ b/war/config/msa/quizlet.properties
@@ -1,9 +1,16 @@
+appTitle=MSA Pronunciation Feedback
 h2Database=msaClassroom
-language=MSA
+usePredefinedTypeOrder=false
+language=msa
 MODELS_DIR=models.dli-ara
 N_HIDDEN=2000,2000
 N_OUTPUT=38
 rtl=true
-lessonPlanFile=msaCourseExamplesAppen.xlsx
-webserviceHostPort=31182
-#phonemeMapping=msa_toipa_v2.txt
+#lessonPlanFile=msaCourseExamplesAppen-vowelized.xlsx
+#lessonPlanFile=msaCourseExamplesAppen.xlsx
+lessonPlanFile=msaCourseExamplesAppen_51_chunked_2.xlsx
+webserviceHostPort=31181
+#dodecode=true
+#dropRefResultTable=true
+#phonemeMapping=msa_toipa.txt
+#usePhoneToDisplay=false
