--- a/war/config/mandarin/quizlet.properties
+++ b/war/config/mandarin/quizlet.properties
@@ -1,9 +1,4 @@
-appTitle=Mandarin Pronunciation Feedback BETA
-splashTitle=classroom Mandarin pronunciation BETA
 usePredefinedTypeOrder=true
-minPronScore=0.31
-loginType=STUDENT
-screenPortion=0.8
 language=Mandarin
 MODELS_DIR=models.dli-mandarin
 h2Database=mandarin
@@ -11,5 +6,6 @@ N_OUTPUT=50
 N_HIDDEN=2500,2500,2500
 mediaDir=bestAudio
 testEmail=false
-lessonPlanFile=mandarin_10_05_15.xlsx
+#lessonPlanFile=mandarin_10_05_15.xlsx
+lessonPlanFile=2016_07_11_CM_simp-trad-vocab_FV.xlsx
 emailAddress=jennifer.melot@ll.mit.edu
