--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,12 @@
         <pathelement location="war/WEB-INF/lib/commons-codec-1.6.jar"/>
         <pathelement location="war/WEB-INF/lib/guava-19.0.jar"/>
         <pathelement location="war/WEB-INF/lib/log4j-1.2.17.jar"/>
+
+        <pathelement location="war/WEB-INF/lib/log4j-core-2.6.2.jar"/>
+        <pathelement location="war/WEB-INF/lib/log4j-jcl-2.6.2.jar"/>
+        <pathelement location="war/WEB-INF/lib/log4j-web-2.6.2.jar"/>
+        <pathelement location="war/WEB-INF/lib/log4j-api-2.6.2.jar"/>
+
         <path refid="imagewriter.classpath"/>
         <pathelement location="war/WEB-INF/lib/pronz_2.11-1.0.jar"/>
         <pathelement location="war/WEB-INF/lib/hydec_2.11-1.0.jar"/>
@@ -328,6 +334,16 @@
     <target depends="build" name="classroomIraqi">
         <jar destfile="npfClassroomIraqi.war" basedir="war"
              includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/iraqi/**,scoring/bin.linux64/**,scoring/configurations/**"
+        >
+            <manifest>
+                <attribute name="Built-Date" value="${current.time}"/>
+            </manifest>
+        </jar>
+    </target>
+
+    <target depends="build" name="netProf">
+        <jar destfile="netProf.war" basedir="war"
+             includes="flashFavIcon.gif,images/**,js/**,langtest/**,LangTest.css,LangTest.html,swf/**,WEB-INF/**,config/netProf/**,scoring/bin.linux64/**,scoring/configurations/**"
         >
             <manifest>
                 <attribute name="Built-Date" value="${current.time}"/>
