config file updates
Former-commit-id: 90046e5dd1a2b4ad3b41c479fe7ffd993171ca94
Former-commit-id: 95f2d52200069289532d8385d6f2cee6ad6769db

--- a/war/config/spanish/quizlet.properties
+++ b/war/config/spanish/quizlet.properties
@@ -10,3 +10,6 @@ N_OUTPUT=25
 N_HIDDEN=2000,2500,2500
 webserviceHostPort=31192
 useH2=false
+#databaseHost=hydra-dev
+#databaseUser=netprof
+#databasePassword=npadmin
