--- a/war/config/spanish/quizlet.properties
+++ b/war/config/spanish/quizlet.properties
@@ -1,18 +1,15 @@
 language=Spanish
 h2Database=npfSpanish
 usePredefinedTypeOrder=true
-#lessonPlanFile=2014_03_20_Spanish_Wordlist_Enrique.xlsx
-#lessonPlanFile=2015_03_04_QB_Spanish_2review_SWagner_Update-finalchanges_forNetprof.xlsx
-#lessonPlanFile=spanishAppenReviewed.xlsx
-#lessonPlanFile=2015_11_05_SpanishContextSentencesMerged.xlsx
-#lessonPlanFile=2016_01_28_SpanishContextSentencesMerged.xlsx
-#lessonPlanFile=2016_02_11_SpanishContextSentencesMerged.xlsx
 lessonPlanFile=2016_04_12_Spanish_NetProF_Context_sentences_Tanya_complete_v2.xlsx
 MODELS_DIR=models.appenSpav3lPlusOld202525
-dodecode=true
-#dropRefResultTable=true
+#dodecode=true
 N_OUTPUT=29
 N_HIDDEN=2000,2500,2500
 webserviceHostPort=31196
-#oldSchoolService=false
 emailAddress=jennifer.melot@ll.mit.edu
+
+#databaseHost=hydra-dev
+#databaseUser=netprof
+#databasePassword=npadmin
+#webserviceHostIP=hydra-dev
