--- a/war/config/russian/quizlet.properties
+++ b/war/config/russian/quizlet.properties
@@ -2,9 +2,18 @@ language=Russian
 h2Database=npfRussian1
 usePredefinedTypeOrder=true
 #lessonPlanFile=2015_10_29_RussianContextSentenceMerge.xlsx
-lessonPlanFile=2016_01_18_RussianContextSentenceMerge.xlsx
+#lessonPlanFile=2016_01_18_RussianContextSentenceMerge.xlsx
+lessonPlanFile=2016_05_11_RussianContextSentenceMerge.xlsx
 MODELS_DIR=models.appenRusv4WithSchwaAndInitDevoicAndNoDupsAndEMerged202525
+#models.appenRusv2PlusOldNoP202525
 tierIndex=4,5,-1
 N_OUTPUT=28
 N_HIDDEN=2000,2500,2500
 webserviceHostPort=31191
+#dropRefResultTable=true
+#dodecode=true
+emailAddress=jennifer.melot@ll.mit.edu
+
+#databaseHost=hydra-dev
+#databaseUser=netprof
+#databasePassword=npadmin
