--- a/war/config/mandarin/quizlet.properties
+++ b/war/config/mandarin/quizlet.properties
@@ -1,12 +1,13 @@
-appTitle=Mandarin Pronunciation Feedback BETA
-splashTitle=classroom Mandarin pronunciation BETA
+#appTitle=Mandarin Pronunciation Feedback BETA
+#splashTitle=classroom Mandarin pronunciation BETA
 usePredefinedTypeOrder=true
 language=Mandarin
 MODELS_DIR=models.dli-mandarin
 h2Database=mandarin
 N_OUTPUT=50
 N_HIDDEN=2500,2500,2500
-mediaDir=bestAudio
-testEmail=false
-lessonPlanFile=mandarin_10_05_15.xlsx
-emailAddress=jennifer.melot@ll.mit.edu
+#mediaDir=bestAudio
+#testEmail=false
+#lessonPlanFile=mandarin_10_05_15.xlsx
+lessonPlanFile=2016_07_11_CM_simp-trad-vocab_FV_V2.xlsx
+#emailAddress=jennifer.melot@ll.mit.edu
